fix(javafx): se habilita native access en bootRun