@@ -44,3 +44,8 @@ dependencies {
 tasks.withType<Test> {
 	useJUnitPlatform()
 }
+
+
+tasks.named<org.springframework.boot.gradle.tasks.run.BootRun>("bootRun") {
+	jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
